@@ -1,3 +1,7 @@
+Sat Apr  5 16:03:25 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/netxml-ups: add connectivity test
+
 Sat Apr  5 13:25:03 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
 
  - drivers/megatec_usb.c: resurrected an old version of agiler
